--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,7 +64,7 @@ header a#Home {
 
 .card {
     height: 200px;
-    width: 300px;
+    width: 100%;
     background-color: rgb(134, 210, 210);
     border-radius: 20px;
     display: flex;
@@ -79,7 +79,7 @@ header a#Home {
 }
 
 #deco {
-    content: url('../../public/images/committee1.png');
+    content: url('../../public/images/committee1.webp');
     height: 100%;
     width: fit-content;
     object-fit: cover;
@@ -87,7 +87,7 @@ header a#Home {
 }
 
 #commitee {
-    content: url('../../public/images/committee2.png');
+    content: url('../../public/images/committee2.webp');
     height: 100%;
     width: fit-content;
     object-fit: cover;
@@ -95,7 +95,7 @@ header a#Home {
 }
 
 #topper {
-    content: url('../../public/images/committee3.png');
+    content: url('../../public/images/committee3.webp');
     height: 100%;
     width: fit-content;
     object-fit: cover;
@@ -113,5 +113,19 @@ header a#Home {
         align-items: center;
         gap: 20px;
         margin: 0;
+    }
+}
+
+
+@media (max-width: 430px) {
+    body {
+        margin-top: 60px !important;
+    }
+}
+
+
+@media (max-width: 300px) {
+    #deco, #commitee, #topper {
+        height: 70%;
     }
 }
