--- a/src/css/resources.css
+++ b/src/css/resources.css
@@ -8,8 +8,10 @@ main {
 .container {
     margin-top: 120px;
     margin-bottom: 100px;
-    align-items: center;
+    
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     gap: 20px;
 }
@@ -27,14 +29,24 @@ main {
     background-color: #333;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
 .dropdown-container {
     margin-top: 250px;
     margin-bottom: 100px;
-    align-items: center;
-    max-width: 100%;
+    max-width: 50%;
     margin-left: 10px;
     margin-right: 10px;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 
