--- a/src/css/events.css
+++ b/src/css/events.css
@@ -5,12 +5,12 @@
 }
 
 body {
-	background: #f5f5f5;
+	background: var(--web-bg-light-theme-color);
     position: static;
 }
 
 header a#Events {
-    color: #ffe600;
+    color: var(--web-text-hover-light-theme-color);
 }
 
 footer {
@@ -27,7 +27,7 @@ footer {
 	width: 100%;
 	height: 120vh;
 	min-height: 500px;
-	background: #f5f5f5;
+	background: var(--web-bg-light-theme-color);
 	padding: 10%;
 	overflow: hidden;
     box-shadow: none;
@@ -50,7 +50,7 @@ footer {
 	top: 50%;
 	transform: translate(0, -50%);
 	border-radius: 20px;
-	box-shadow: 0 30px 50px #505050;
+	box-shadow: 0 30px 50px var(--web-box-shadow-dark-theme-color);
 	background-position: center;
 	background-size: cover;
 	transition: 0.5s;
@@ -119,6 +119,8 @@ footer {
 	font-size: 40px;
 	text-transform: uppercase;
 	font-weight: bold;
+	/* -webkit-text-stroke: 1px var(--web-accent-light-theme-color); */
+	text-shadow: 0 0 10px black;
 	opacity: 0;
 	animation: animate 1s ease-in-out 1 forwards;
 }
@@ -126,16 +128,28 @@ footer {
 .content .des {
 	margin-top: 10px;
 	margin-bottom: 20px;
+	font-weight: 900;
+	font-size: 20px;
+	/* -webkit-text-stroke: 0.3px var(--web-accent-light-theme-color); */
+	text-shadow: 0 0 12px black;
 	opacity: 0;
 	animation: animate 1s ease-in-out 0.3s 1 forwards;
 }
 
 .content button {
 	padding: 10px 20px;
-	border: none;
-	cursor: pointer;
 	opacity: 0;
 	animation: animate 1s ease-in-out 0.6s 1 forwards;
+	border-radius: 8px;
+    cursor: pointer;
+    margin: 0 5px;
+    border: 1px solid var(--web-border-light-theme-color);
+    transition: 0.3s;
+}
+
+.content button:hover {
+    background: var(--web-accent-light-theme-color);
+    color: var(--web-contrast-light-theme-color);
 }
 
 @keyframes animate {
@@ -168,13 +182,13 @@ footer {
 	border: none;
 	cursor: pointer;
 	margin: 0 5px;
-	border: 1px solid #000;
+	border: 1px solid var(--web-border-light-theme-color);
 	transition: 0.3s;
 }
 
 .button button:hover {
-	background: #ababab;
-	color: #fff;
+	background: var(--web-accent-light-theme-color);
+	color: var(--web-contrast-light-theme-color);
 }
 
 /* Media query for responsiveness */
