--- a/src/css/magazines.css
+++ b/src/css/magazines.css
@@ -6,12 +6,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: var(--web-bg-light-theme-color);
+    color: var(--web-heading-light-theme-color);
 }
 
 header a#Magazines {
-    color: #ffe600;
+    color: var(--web-text-hover-light-theme-color);
 }
 
 .dropdown-container {
@@ -25,7 +25,7 @@ header a#Magazines {
 select {
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--web-contrast-minor-light-theme-color);
     border-radius: 5px;
     outline: none;
 }
@@ -36,7 +36,7 @@ select {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #fff;
+    background: var(--web-surface-light-theme-color);
     padding: 20px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -63,8 +63,8 @@ button {
 }
 
 button:hover {
-    background-color: rgb(1, 184, 163);
-    color: #fff;
+    background-color: var(--web-accent-light-theme-color);
+    color: var(--web-contrast-light-theme-color);
 }
 
 .pdf-viewer {
@@ -83,7 +83,7 @@ canvas {
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
     width: 100%;
-    border: 2px solid black;
+    border: 2px solid var(--web-border-light-theme-color);
 }
 
 .pdf-container {
