--- a/src/css/members.css
+++ b/src/css/members.css
@@ -7,12 +7,12 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;
-	background-color: #f4f4f4;
-	color: #333;
+	background-color: var(--web-bg-light-theme-color);
+	color: var(--web-heading-light-theme-color);
 }
 
 header a#Members {
-    color: #ffe600;
+    color: var(--web-text-hover-light-theme-color);
 }
 
 /* Content and Members Grid Styling */
@@ -34,13 +34,13 @@ header a#Members {
 	background: white;
 	border-radius: 10px;
 	overflow: hidden;
-	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+	box-shadow: 0px 4px 10px var(--web-box-shadow-light-theme-color);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .member-card:hover {
 	transform: translateY(-5px);
-	box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 6px 12px var(--web-box-shadow-light-theme-color);
 }
 
 .member-image {
