--- a/src/css/resources.css
+++ b/src/css/resources.css
@@ -10,7 +10,8 @@ body {
     font-family: Arial, sans-serif;
 }
 
-html, body {
+html,
+body {
     height: 100%; /* Ensure html and body take the full height of the viewport */
     margin: 0; /* Remove any default margins */
     display: flex; /* Enable flexbox */
@@ -19,6 +20,10 @@ html, body {
 
 body > * {
     flex-shrink: 0; /* Prevent children from shrinking */
+}
+
+#selection-panel {
+    display: none;
 }
 
 main {
@@ -54,7 +59,7 @@ main {
 
 span#selected-info {
     font-size: x-large;
-    font-family: 'Poppins';
+    font-family: "Poppins";
     color: black;
     font-weight: bold;
     text-align: center;
@@ -102,7 +107,7 @@ span#selected-info {
     margin-bottom: 10px;
 }
 
-.semester h4 {
+h4.semester {
     color: var(--web-heading-light-theme-color);
     font-weight: bold;
     margin-top: 10px;
@@ -129,8 +134,6 @@ span#selected-info {
     text-wrap: wrap;
 }
 
-
-
 .download-btn {
     background-color: var(--web-accent-light-theme-color);
     color: var(--web-contrast-light-theme-color);
@@ -144,13 +147,11 @@ span#selected-info {
     display: inline-block;
 }
 
-
 .download-btn:hover {
     background-color: var(--web-button-hover-light-theme-color);
 }
 
-
-#yearSelection{
+#yearSelection {
     margin-top: 20px;
 }
 
