--- a/src/css/events.css
+++ b/src/css/events.css
@@ -1,16 +1,16 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-	background: var(--web-bg-light-theme-color);
+    background: var(--web-bg-color);
     position: static;
 }
 
 header a#Events {
-    color: var(--web-text-hover-light-theme-color);
+    color: var(--web-text-hover-color);
 }
 
 footer {
@@ -19,209 +19,206 @@ footer {
 }
 
 .slider-container {
-	position: relative;
-	top: 60vh;
+    position: relative;
+    top: 60vh;
     bottom: 0;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 100%;
-	height: 120vh;
-	min-height: 500px;
-	background: var(--web-bg-light-theme-color);
-	padding: 10%;
-	overflow: hidden;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 120vh;
+    min-height: 500px;
+    background: var(--web-bg-color);
+    padding: 10%;
+    overflow: hidden;
     box-shadow: none;
     padding-bottom: calc(10% + 35px);
 }
 
 .slide {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
-	transition: 0.5s;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    transition: 0.5s;
 }
 
 .slider-container .slide .item {
-	width: 200px;
-	height: 300px;
-	position: absolute;
-	top: 50%;
-	transform: translate(0, -50%);
-	border-radius: 20px;
-	box-shadow: 0 30px 50px var(--web-box-shadow-dark-theme-color);
-	background-position: center;
-	background-size: cover;
-	transition: 0.5s;
-	z-index: 1;
+    width: 200px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    border-radius: 20px;
+    box-shadow: 0 30px 50px var(--web-box-shadow-dark-theme-color);
+    background-position: center;
+    background-size: cover;
+    transition: 0.5s;
+    z-index: 1;
     /* border-radius: 10px; */
 }
 
-.slide .item 
-
-.slide .item:nth-child(1),
+.slide .item .slide .item:nth-child(1),
 .slide .item:nth-child(2) {
-	top: 0;
-	left: 0;
-	transform: translate(0, 0);
-	border-radius: 20px;
-	width: 100%;
-	height: 100%;
-	z-index: 2;
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
 }
 
 /* Responsive main item */
 @media (max-width: 768px) {
-	.slide .item:nth-child(2) {
-		width: 100%;
-	}
+    .slide .item:nth-child(2) {
+        width: 100%;
+    }
 }
 
 .slide .item:nth-child(3) {
-	left: 50%;
-	z-index: 5;
+    left: 50%;
+    z-index: 5;
 }
 
 .slide .item:nth-child(4) {
-	left: calc(50% + 220px);
-	z-index: 5;
+    left: calc(50% + 220px);
+    z-index: 5;
 }
 
 .slide .item:nth-child(5) {
-	left: calc(50% + 440px);
-	z-index: 5;
+    left: calc(50% + 440px);
+    z-index: 5;
 }
 
 .slide .item:nth-child(n + 6) {
-	left: calc(50% + 660px);
-	opacity: 0;
-	z-index: 5;
+    left: calc(50% + 660px);
+    opacity: 0;
+    z-index: 5;
 }
 
 .item .content {
-	position: absolute;
-	top: 50%;
-	left: 5%;
-	width: 300px;
-	text-align: left;
-	color: #eee;
-	transform: translate(0, -50%);
-	font-family: system-ui;
-	display: none;
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    width: 300px;
+    text-align: left;
+    color: #eee;
+    transform: translate(0, -50%);
+    display: none;
 }
 
 .slide .item:nth-child(2) .content {
-	display: block;
+    display: block;
 }
 
 .content .name {
-	font-size: 40px;
-	text-transform: uppercase;
-	font-weight: bold;
-	/* -webkit-text-stroke: 1px var(--web-accent-light-theme-color); */
-	text-shadow: 0 0 10px black;
-	opacity: 0;
-	animation: animate 1s ease-in-out 1 forwards;
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    /* -webkit-text-stroke: 1px var(--web-accent-color); */
+    text-shadow: 0 0 10px black;
+    opacity: 0;
+    animation: animate 1s ease-in-out 1 forwards;
 }
 
 .content .des {
-	margin-top: 10px;
-	margin-bottom: 20px;
-	font-weight: 900;
-	font-size: 20px;
-	/* -webkit-text-stroke: 0.3px var(--web-accent-light-theme-color); */
-	text-shadow: 0 0 12px black;
-	opacity: 0;
-	animation: animate 1s ease-in-out 0.3s 1 forwards;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-weight: 900;
+    font-size: 20px;
+    /* -webkit-text-stroke: 0.3px var(--web-accent-color); */
+    text-shadow: 0 0 12px black;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
 }
 
 .content button {
-	padding: 10px 20px;
-	opacity: 0;
-	animation: animate 1s ease-in-out 0.6s 1 forwards;
-	border-radius: 8px;
+    padding: 10px 20px;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+    border-radius: 8px;
     cursor: pointer;
     margin: 0 5px;
-    border: 1px solid var(--web-border-light-theme-color);
+    border: 1px solid var(--web-border-color);
     transition: 0.3s;
 }
 
 .content button:hover {
-    background: var(--web-accent-light-theme-color);
-    color: var(--web-contrast-light-theme-color);
+    background: var(--web-accent-color);
+    color: var(--web-contrast-color);
 }
 
 @keyframes animate {
-	from {
-		opacity: 0;
-		transform: translate(0, 100px);
-		filter: blur(33px);
-	}
+    from {
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
 
-	to {
-		opacity: 1;
-		transform: translate(0);
-		filter: blur(0);
-	}
+    to {
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
 }
 
 /* Buttons for sliding */
 .button {
-	width: 80%;
-	text-align: center;
-	position: absolute;
-	bottom: calc(20vh + 35px);
-	z-index: 5;
+    width: 80%;
+    text-align: center;
+    position: absolute;
+    bottom: calc(20vh + 35px);
+    z-index: 5;
 }
 
 .button button {
-	width: 40px;
-	height: 35px;
-	border-radius: 8px;
-	border: none;
-	cursor: pointer;
-	margin: 0 5px;
-	border: 1px solid var(--web-border-light-theme-color);
-	transition: 0.3s;
+    width: 40px;
+    height: 35px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
+    border: 1px solid var(--web-border-color);
+    transition: 0.3s;
 }
 
 .button button:hover {
-	background: var(--web-accent-light-theme-color);
-	color: var(--web-contrast-light-theme-color);
+    background: var(--web-accent-color);
+    color: var(--web-contrast-color);
 }
 
 /* Media query for responsiveness */
 @media (max-width: 768px) {
-	.slider-container {
-		width: 100%;
-		height: 65vh;
+    .slider-container {
+        width: 100%;
+        height: 65vh;
         top: 35vh;
         padding-bottom: calc(10% + 50px);
-	}
+    }
 
-	.slide .item:nth-child(2) {
-		width: 90%;
-		left: 5%;
-		top: 10px;
-		transform: none;
-	}
+    .slide .item:nth-child(2) {
+        width: 90%;
+        left: 5%;
+        top: 10px;
+        transform: none;
+    }
 
-	.slide .item:nth-child(3),
-	.slide .item:nth-child(4),
-	.slide .item:nth-child(5) {
-		left: 50%;
-		opacity: 0;
-	}
-	.button {
-		bottom: calc(10vh + 15px);
-	}
-	.item .content {
-		position: absolute;
-		top: 50%;
-		left: 5%;
-		width: 200px;
-	}
+    .slide .item:nth-child(3),
+    .slide .item:nth-child(4),
+    .slide .item:nth-child(5) {
+        left: 50%;
+        opacity: 0;
+    }
+    .button {
+        bottom: calc(10vh + 15px);
+    }
+    .item .content {
+        position: absolute;
+        top: 50%;
+        left: 5%;
+        width: 200px;
+    }
 
     .content .name {
         font-size: 32px;
