--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,19 +5,19 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--web-bg-light-theme-color);
-    color: var(--web-heading-light-theme-color);
+    font-family: "Poppins", sans-serif;
+    background-color: var(--web-bg-color);
+    color: var(--web-heading-color);
     width: 100%;
     position: absolute;
 }
 .header {
     width: 100%;
-    background-color: var(--web-accent-light-theme-color);
+    background-color: var(--web-accent-color);
     position: fixed;
     top: 0;
     z-index: 10;
-    box-shadow: 0 4px 12px var(--web-box-shadow-light-theme-color);
+    box-shadow: 0 4px 12px var(--web-box-shadow-color);
 }
 
 .navbar {
@@ -53,7 +53,7 @@ body {
 }
 
 .anchors a {
-    color: var(--web-contrast-light-theme-color);
+    color: var(--web-contrast-color);
     text-decoration: none;
     font-weight: 600;
     padding: 8px 16px;
@@ -62,8 +62,29 @@ body {
 }
 
 .anchors a:hover {
-    color: var(--web-text-hover-light-theme-color);
+    color: var(--web-text-hover-color);
     transform: scale(1.05);
+}
+
+/* Theme Toggle Styles */
+.theme-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin-left: 20px; */
+}
+
+.theme-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: var(--web-contrast-color);
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.theme-button:hover {
+    transform: scale(1.2);
 }
 
 /* Hamburger Menu */
@@ -127,7 +148,6 @@ body {
         height: 50px;
     }
 }
-
 
 @media (max-width: 500px) {
     .anchors a {
