--- a/src/css/magazines.css
+++ b/src/css/magazines.css
@@ -5,13 +5,12 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: var(--web-bg-light-theme-color);
-    color: var(--web-heading-light-theme-color);
+    background-color: var(--web-bg-color);
+    color: var(--web-heading-color);
 }
 
 header a#Magazines {
-    color: var(--web-text-hover-light-theme-color);
+    color: var(--web-text-hover-color);
 }
 
 .dropdown-container {
@@ -25,7 +24,7 @@ header a#Magazines {
 select {
     padding: 10px;
     font-size: 16px;
-    border: 1px solid var(--web-contrast-minor-light-theme-color);
+    border: 1px solid var(--web-contrast-minor-color);
     border-radius: 5px;
     outline: none;
 }
@@ -36,7 +35,7 @@ select {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: var(--web-surface-light-theme-color);
+    background: var(--web-surface-color);
     padding: 20px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -63,8 +62,8 @@ button {
 }
 
 button:hover {
-    background-color: var(--web-accent-light-theme-color);
-    color: var(--web-contrast-light-theme-color);
+    background-color: var(--web-accent-color);
+    color: var(--web-contrast-color);
 }
 
 .pdf-viewer {
@@ -83,7 +82,7 @@ canvas {
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
     width: 100%;
-    border: 2px solid var(--web-border-light-theme-color);
+    border: 2px solid var(--web-border-color);
 }
 
 .pdf-container {
@@ -131,7 +130,7 @@ canvas {
     background: none;
     border: none;
     font-size: 24px;
-    color: #333;
+    color: var(--web-heading-color);
     cursor: pointer;
     z-index: 1001; /* Ensure it stays above other elements */
 }
@@ -194,7 +193,6 @@ canvas {
     scrollbar-width: thin;
     scrollbar-color: #ccc #f4f4f4;
 }
-
 
 @media (max-width: 600px) {
     .card-container-content {
