--- a/src/css/resource_showcase.css
+++ b/src/css/resource_showcase.css
@@ -230,6 +230,7 @@ h2 {
     color: var(--web-contrast-color);
     font-weight: bold;
     font-size: 1.2rem;
+    word-wrap: break-word;
 }
 
 .pdf-author {
