second year page is done with resource section, also references have been added

--- a/src/css/members.css
+++ b/src/css/members.css
@@ -73,7 +73,7 @@ header a#Members {
     background-image: url("../../public/images/members/discipline2.webp");
 }
 #creativity1 .member-image {
-    background-image: url("../../public/images/members/creative1.webp");
+    background-image: url("../../public/images/members/creative1.jpg");
 }
 #creativity2 .member-image {
     background-image: url("../../public/images/members/creative2.webp");
@@ -94,7 +94,7 @@ header a#Members {
     background-image: url("../../public/images/members/tech-sec.webp");
 }
 #technicalmem1 .member-image {
-    background-image: url("../../public/images/members/tech1.webp");
+    background-image: url("../../public/images/members/tech1.jpg");
 }
 #technicalmem2 .member-image {
     background-image: url("../../public/images/members/tech2.webp");
